--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,16 @@
 buildscript {
-    repositories { jcenter() }
+//    repositories { jcenter() }
+    repositories {
+        maven {
+            url 'http://maven.aliyun.com/nexus/content/groups/public/'
+        }
+    }
 
     dependencies {
         classpath 'com.netflix.nebula:gradle-extra-configurations-plugin:2.2.+'
     }
 }
+
 
 plugins {
     id 'nebula.netflixoss' version '3.6.0'
