Revert "修改gradle从阿里的maven镜像仓库下载依赖"
This reverts commit 5e93b76c2edb2e488b3e8f623ec60aff0fd58aa3.

--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,10 @@
 buildscript {
-//    repositories { jcenter() }
-    repositories {
-        maven {
-            url 'http://maven.aliyun.com/nexus/content/groups/public/'
-        }
-    }
+    repositories { jcenter() }
 
     dependencies {
         classpath 'com.netflix.nebula:gradle-extra-configurations-plugin:2.2.+'
     }
 }
-
 
 plugins {
     id 'nebula.netflixoss' version '3.6.0'
