--- a/eureka-server/build.gradle
+++ b/eureka-server/build.gradle
@@ -4,6 +4,7 @@ dependencies {
     compile project(':eureka-client')
     compile project(':eureka-core')
     runtime 'xerces:xercesImpl:2.4.0'
+    //jersey 可以理解为和spring mvc 类似的框架，是restful
     compile "com.sun.jersey:jersey-server:$jerseyVersion"
     compile "com.sun.jersey:jersey-servlet:$jerseyVersion"
     compile 'org.slf4j:slf4j-log4j12:1.6.1'
